--- a/libase/build.gradle
+++ b/libase/build.gradle
@@ -45,8 +45,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    
-    implementation('androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1')
-    implementation('androidx.lifecycle:lifecycle-runtime-ktx:2.4.1')
-    implementation('androidx.lifecycle:lifecycle-livedata-ktx:2.4.1')
+
+    api('androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1')
+    api('androidx.lifecycle:lifecycle-runtime-ktx:2.4.1')
+    api('androidx.lifecycle:lifecycle-livedata-ktx:2.4.1')
+    api('androidx.fragment:fragment-ktx:1.4.1')
 }
